Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

Wed Jan 15 20:16:21 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-info.c (remove_data_from_hash_by_name): call
	correctly in all the right places.

Mon Jan 13 15:04:47 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-info.c: rewrote to handle fam more correctly.  Still
	a little broken in places, but much, much better than before.

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-28  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnome-theme-info.c: (gnome_theme_info_init):

	Update icon theme directory code so it looks in
	PREFIX/share/icons rather than PREFIX/share/theme,
	as per freedesktop icon spec.

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

Fri Dec  6 16:13:54 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-info.c (top_theme_dir_changed_callback): I know C.
	Really, I do.

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

Tue Nov  5 15:48:33 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-info.c: Change the file format a bunch.

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

Fri Nov  1 11:03:34 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-info.[ch]: Moved theme-common, and gave more
	features.

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-07-16  Jody Goldberg <jody@gnome.org>

	* gconf-property-editor.c (gconf_value_int_to_float) : add a peditor
	  arg so that these can be used without wrappers.
	(gconf_value_float_to_int) : ditto.

2002-07-10  Jody Goldberg <jody@gnome.org>

	* capplet-util.c (capplet_set_icon) : look in more places.

2002-07-02  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=86018
	* gconf-property-editor.c (peditor_image_set_filename) : Patch from