@@ -1,3 +1,8 @@
+Thu Jan 16 15:51:33 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-theme-test.c: new little test program for helping people
+	debug their installation.
+
 Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>
 
 	* Release 2.1.7
